overflow fix

--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 @import url(https://dl.dropboxusercontent.com/u/15746367/fonts/carmela/style.css);
 @import url(https://fonts.googleapis.com/earlyaccess/alefhebrew.css);
 @import url(https://fonts.googleapis.com/earlyaccess/opensanshebrewcondensed.css);
-body {
+html, body {
     font-family: "Carmela", sans-serif;
     padding: 0;
     margin: 0;
